feat: add Swagger documentation for recipe and user creation and update endpoints
